force-app/main/default/objects/Animal360_Automation_Setting__mdt/Animal360_Automation_Setting__mdt.object-meta.xml
<CustomObject>
    <description
  >Packaged automation settings used by assessment, care-plan, and reminder services.</description>
    <label>Animal360 Automation Setting</label>
    <pluralLabel>Animal360 Automation Settings</pluralLabel>
</CustomObject>