force-app/main/default/objects/Animal360_Automation_Setting__mdt/fields/Auto_Create_Care_Plan__c.field-meta.xml
<CustomField>
    <fullName>Auto_Create_Care_Plan__c</fullName>
    <description
  >Enables care-plan auto creation for matching high-risk assessments.</description>
    <label>Auto Create Care Plan</label>
    <defaultValue>true</defaultValue>
    <type>Checkbox</type>
</CustomField>