force-app/main/default/objects/Animal360_Automation_Setting__mdt/fields/Create_Reminder_Tasks__c.field-meta.xml
<CustomField>
    <fullName>Create_Reminder_Tasks__c</fullName>
    <description>Enables scheduled reminder task generation.</description>
    <label>Create Reminder Tasks</label>
    <defaultValue>true</defaultValue>
    <type>Checkbox</type>
</CustomField>