force-app/main/default/objects/Animal360_Automation_Setting__mdt/fields/Default_Action_Type__c.field-meta.xml
<CustomField>
    <fullName>Default_Action_Type__c</fullName>
    <description
  >Default action type used for generated care-plan actions.</description>
    <label>Default Action Type</label>
    <length>80</length>
    <type>Text</type>
</CustomField>