force-app/main/default/objects/Animal360_Automation_Setting__mdt/fields/Default_Care_Plan_Type__c.field-meta.xml
<CustomField>
    <fullName>Default_Care_Plan_Type__c</fullName>
    <description
  >Default care-plan type used for automated escalation plans.</description>
    <label>Default Care Plan Type</label>
    <length>80</length>
    <type>Text</type>
</CustomField>