force-app/main/default/objects/Animal360_Automation_Setting__mdt/fields/Default_Review_Days__c.field-meta.xml
<CustomField>
    <fullName>Default_Review_Days__c</fullName>
    <description
  >Fallback review interval used when no status transition rule applies.</description>
    <label>Default Review Days</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>