force-app/main/default/objects/Animal360_Automation_Setting__mdt/fields/Reminder_Lead_Days__c.field-meta.xml
<CustomField>
    <fullName>Reminder_Lead_Days__c</fullName>
    <description
  >How many days in advance reminder tasks should be created.</description>
    <label>Reminder Lead Days</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>