force-app/main/default/objects/Animal360_Automation_Setting__mdt/fields/Setting_Key__c.field-meta.xml
<CustomField>
    <fullName>Setting_Key__c</fullName>
    <description>Stable setting key used by runtime services.</description>
    <label>Setting Key</label>
    <length>80</length>
    <type>Text</type>
</CustomField>